Attempt to fix missing padding on new layout

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,7 +26,7 @@ a:visited {
 
 #main-header {
 	background-color: #670000;
-	padding: 1em 0.5em 0.5em 1.0em;
+	padding: 1em 0.5em 0.5em 1em;
 	margin-left: -1em;
 	margin-top: -1em;
 	position: relative;
